# cargo-insert-docs

./: CHANGELOG.md  Cargo.toml  README.md  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: cli.md  config.md
src/: cli.rs  config.rs  edit_crate_docs.rs  error_sink.rs  extract_crate_docs.rs  extract_feature_docs.rs  git.rs  main.rs  markdown.rs  pretty_log.rs  rustdoc_json.rs  string_replacer.rs  style.rs  tests.rs
src/config/: tests.rs
src/edit_crate_docs/: tests.rs
src/error_sink/: tests.rs
src/extract_crate_docs/: child_to_parent.rs  resolver.rs  rewrite_markdown.rs
src/extract_crate_docs/child_to_parent/: tests.rs
src/extract_crate_docs/resolver/: index.rs  paths.rs
src/extract_crate_docs/resolver/index/: parents.rs  simple.rs  tests.rs
src/extract_crate_docs/resolver/paths/: tests.rs
src/extract_crate_docs/rewrite_markdown/: tests.rs
src/extract_feature_docs/: tests.rs
src/git/: tests.rs
src/markdown/: lang_string.rs  section.rs  tests.rs  tree.rs
src/markdown_rs/: README.md  configuration.rs  event.rs  message.rs  mod.rs  parser.rs  resolve.rs  state.rs  subtokenize.rs  tokenizer.rs  unist.rs
src/markdown_rs/construct/: attention.rs  autolink.rs  blank_line.rs  block_quote.rs  character_escape.rs  character_reference.rs  code_indented.rs  content.rs  definition.rs  document.rs  flow.rs  frontmatter.rs  gfm_autolink_literal.rs  gfm_footnote_definition.rs  gfm_label_start_footnote.rs  gfm_table.rs  gfm_task_list_item_check.rs  hard_break_escape.rs  heading_atx.rs  heading_setext.rs  html_flow.rs  html_text.rs  label_end.rs  label_start_image.rs  label_start_link.rs  list_item.rs  mdx_esm.rs  mdx_expression_flow.rs  mdx_expression_text.rs  mdx_jsx_flow.rs  mdx_jsx_text.rs  paragraph.rs  partial_bom.rs  partial_data.rs  partial_destination.rs  partial_label.rs  partial_mdx_expression.rs  partial_mdx_jsx.rs  partial_non_lazy_continuation.rs  partial_space_or_tab.rs  (+8 more)
src/markdown_rs/util/: char.rs  character_reference.rs  constant.rs  edit_map.rs  gfm_tagfilter.rs  infer.rs  location.rs  mdx.rs  mdx_collect.rs  normalize_identifier.rs  sanitize_uri.rs  skip.rs  slice.rs
src/pretty_log/: pretty_eyre.rs  tests.rs  visit_str.rs
src/string_replacer/: tests.rs
tests/example-crate/: Cargo.toml  README.md
tests/example-crate/src/: lib.rs
tests/test-bin/: Cargo.toml  README.md
tests/test-bin-lib/: Cargo.toml  README.md
tests/test-bin-lib/src/: main.rs
tests/test-bin/src/: main.rs
tests/test-config/: Cargo.toml  print-config.toml
tests/test-crate/: Cargo.toml  MEREAD.md  README.md  lib.rs  links.diff  stderr.txt
tests/test-crate-dep/: Cargo.toml  README.md  lib.rs
tests/test-document-features/: Cargo.toml  README.md
tests/test-document-features/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: compare_links.rs  main.rs  util.rs
