[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "0.6.21"
anstyle = "1.0.13"
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = { version = "0.6.5", features = ["capture-spantrace"] }
fancy-regex = { version = "0.16.2", default-features = false, features = ["std"] }
xshell = "0.2.7"
