[package]
edition = "2024"
name = "xtask"

[dependencies]
anstream = { workspace = true }
anstyle = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true, features = ["capture-spantrace"] }
fancy-regex = { workspace = true, default-features = false, features = ["std"] }
xshell = { workspace = true }
