[package]
edition = "2024"
name = "xtask"

[dependencies]
anstream = { workspace = true }
anstyle = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
fancy-regex = { workspace = true }
markdown = { workspace = true }
similar = { workspace = true }
tl = { workspace = true }
