[package]
name = "test-config"
edition = "2024"

[workspace.metadata.insert-docs]
workspace = true
this-is-not-a-valid-field = "so please warn about it"
feature-into-crate = false
crate-into-readme = false
feature-label = "from workspace label"
feature-section-name = "from workspace feature section"
crate-section-name = "from workspace crate section"
link-to-latest = true
document-private-items = true
no-deps = true
check = true
allow-missing-section = true
allow-staged = true
features = ["foo", "bar", "baz"]
all-features = true
no-default-features = true
bin = "foo"                                             # TODO: test collision
toolchain = "toolchain from workspace"
target = "wasm32-unknown-unknown"
target-dir = "target dir from workspace"
readme-path = "readme path from workspace"

[package.metadata.insert-docs]
this-is-not-a-valid-field = "so please warn about it"
feature-into-crate = true
crate-into-readme = true
feature-label = "from package label"
feature-section-name = "from package feature section"
crate-section-name = "from package crate section"
link-to-latest = true
document-private-items = true
no-deps = true
check = false
allow-missing-section = true
allow-staged = true
features = ["foo", "bar", "baz"]
all-features = true
no-default-features = true
lib = true
toolchain = "toolchain from package"
target = "wasm32-unknown-unknown"
target-dir = "target dir from package"
readme-path = "readme path from package"
