[package]
edition = "2024"
name = "test-config"

[workspace.metadata.insert-docs]
all-features = true
allow-missing-section = true
allow-staged = true
bin = "foo"
check = true
crate-into-readme = false
crate-section-name = "crate section from workspace "
document-private-items = true
feature-into-crate = false
feature-label = "feature label from workspace"
feature-section-name = "feature section from workspace "
features = ["foo", "bar", "baz"]
link-to-latest = true
no-default-features = true
no-deps = true
readme-path = "readme path from workspace"
shrink-headings = 2
target = "wasm32-unknown-unknown"
target-dir = "target dir from workspace"
this-is-not-a-valid-field = "so please warn about it"
toolchain = "toolchain from workspace"
workspace = true

[package.metadata.insert-docs]
all-features = true
allow-missing-section = true
allow-staged = true
check = false
crate-into-readme = true
crate-section-name = "crate section from package"
document-private-items = true
feature-into-crate = true
feature-label = "feature label from package"
feature-section-name = "feature section from package"
features = ["foo", "bar", "baz"]
lib = true
link-to-latest = true
no-default-features = true
no-deps = true
readme-path = "readme path from package"
shrink-headings = -1
target = "wasm32-unknown-unknown"
target-dir = "target dir from package"
this-is-not-a-valid-field = "so please warn about it"
toolchain = "toolchain from package"
