[package]
name = "test-crate"
edition = "2024"
readme = "MEREAD.md"

[lib]
path = "lib.rs"

[features]
default = ["std"]

## Some docs about std
std = []

## Some docs about serde
##
## Multiple lines work too
serde = []
something_undocumented = []

## Actually used feature, enables recursive imports that will cause errors.
recurse = []

## Actually used feature, enables recursive glob imports that will cause errors.
recurse-glob = []

#! Here you can write documentation that goes
#! between the features

## Wow
something_else = []

[dependencies]
fast-glob = "=1.0.0"
indoc = { git = "https://github.com/dtolnay/indoc", rev = "4bfa29fcde487bd57c61db452773fff50f20c819" }
phf_macros = "0.12.1"
test-crate-dep = { version = "0.0.0", path = "../test-crate-dep" }

[package.metadata.insert-docs]
feature-section-name = "features"
crate-section-name = "docs"
shrink-headings = 2
