[package]
edition = "2024"
name = "test-document-features"

[features]
default = ["std"]

## Enables some more convenient api.
std = []

#! ### Nightly features
#! Or daily features i guess.

## Adds some cool stuff I hope.
nightly-whatever = []

[dependencies]
document-features = { workspace = true }
