[package]
name = "test-document-features"
edition = "2024"

[dependencies]
document-features = { workspace = true }

[features]
default = ["std"]

## Enables some more convenient api.
std = []

#! ### Nightly features
#! Or daily features i guess.

## Adds some cool stuff I hope.
nightly-whatever = []
